--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,58 @@
-#container {
-  text-align: center;
+ion-button {
+  width: 99%;
+  height: 100px;
+  font-size: 2.5em !important;
+  margin: 0px;
+  padding: 0px;
+}
 
+ion-col {
+  margin: 0px;
+  padding: 0px;
+}
+
+ion-row {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 0px;
+  margin: 0px;
+  padding: 0px;
+  margin-bottom: 3px;
+  margin-right: 2px;
+  /* border: 1px solid black ; */
+  margin-left: 10px;
+}
+
+.b {
+  height: 40px;
+  width: 20%;
+  font-size: 10px !important;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+h1 {
+  margin-left: 10px;
+}
+
+h2 {
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
+
+.blur {
+  filter: blur(3px);
+}
+
+.overlay {
   position: absolute;
-  left: 0;
-  right: 0;
   top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  text-align: center;
+  padding: 1rem;
   margin: 0;
-}
-
-#container a {
-  text-decoration: none;
 }
